# gem-transcribe

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.ja.md  README.md  config.example.toml  pyproject.toml
docs/en/: gem-transcribe-rfp.md
docs/ja/: gem-transcribe-rfp.ja.md
src/gem_transcribe/: __init__.py  cli.py  config.py  models.py  orchestrator.py
src/gem_transcribe/gcs/: __init__.py  uploader.py
src/gem_transcribe/llm/: __init__.py  client.py  prompts.py
src/gem_transcribe/output/: formatters.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_formatters.py  test_models.py  test_orchestrator.py  test_prompts.py  test_uploader.py
